--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,15 @@
+
+*.bmp
+*.json
+*.DCM
+*.dcm
+*.csv
+*.xls
+*.xlsx
+*.pth
+*.txt
+
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
